--- a/rl-study/src/index.template.html
+++ b/rl-study/src/index.template.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue HN 2.0</title>
+    <title><%= htmlWebpackPlugin.options.title%></title>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <link rel="shortcut icon" sizes="48x48" href="/public/logo-48.png">
     <meta name="theme-color" content="#f60">
-    <script src="http://mockjs.com/dist/mock.js"></script>
     <link rel="manifest" href="/manifest.json">
     <% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
