--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -14,6 +14,9 @@
 
 </div>
 </body>
+<script>
+    window.__INITIAL_STATE__ = {"UserReducer": {"isAuthenticated": true, "user": {"role": "nr", "name": "jin"}}}
+</script>
 <script src="vendor.js"></script>
 <script src="admin.js"></script>
 </html>
