--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -22,6 +22,8 @@
         }
     }
 </script>
+<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script src="weixinAudio.js" type="text/javascript" charset="utf-8"></script>
 <script src="vendor.js"></script>
 <script src="admin.js"></script>
 </html>
