--- a/rl-study/src/index.template.html
+++ b/rl-study/src/index.template.html
@@ -13,6 +13,8 @@
           if (file.match(/\.(js|css)$/)) { %>
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>">
     <% }}} %>
+    <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script src="public/weixinAudio.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
   <div id="app">
@@ -20,4 +22,5 @@
   </div>
     <!--vue-ssr-outlet-->
   </body>
+
 </html>
